# nixdle

./: .editorconfig  .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO  flake.nix
.github/: CODEOWNERS
.github/workflows/: checks.yml  release.yml  update.yml
cli/: Cargo.toml
cli/src/: args.rs  crypto.rs  error.rs  lockfile.rs  main.rs  theme.rs  ui.rs
cli/src/cli/: args.rs  mod.rs  theme.rs
lib/: Cargo.toml
lib/migrations/postgres/: 0001_init.sql
lib/migrations/sqlite/: 0001_init.sql
lib/src/: api.rs  function.rs  game.rs  lib.rs  main.rs
nix/: data.nix  default.nix  formatter.nix  shell.nix
scripts/: check-commit-message.sh
server/: Cargo.toml
server/src/: main.rs
