[workspace]
resolver = "3"
members = ["lib", "cli", "server"]
default-members = ["lib", "cli"]

[workspace.package]
version = "0.0.1-alpha.1"
authors = ["adam <me@adamperkowski.dev>"]
edition = "2024"
description = "wordle but it's nix functions"
readme = "README.md"
repository = "https://github.com/adamperkowski/nixdle"
license = "MIT"
keywords = ["nix", "games"]
categories = ["command-line-utilities", "games", "web-programming"]

[workspace.dependencies.nixdle]
path = "lib"
default-features = false

[workspace.dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1.0"
default-features = false
features = ["std"]

[workspace.dependencies.sqlx]
version = "0.8.6"
default-features = false
features = ["chrono", "json", "macros"]

[profile.release]
lto = "fat"
codegen-units = 2
panic = "abort"
strip = true
opt-level = "z"
