[package]
name = "nixdle-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme = "../README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "nixdle"
path = "src/main.rs"
test = false
doctest = false
bench = false
doc = false
required-features = []

[dependencies]
color-eyre = "0.6.5"

[dependencies.nixdle]
workspace = true
default-features = false
features = ["serde"]

[dependencies.clap]
version = "4.5.53"
default-features = false
features = ["color", "error-context", "help", "std", "usage", "derive"]
[dependencies.console]
version = "0.16.1"
[dependencies.dialoguer]
version = "0.12.0"
[dependencies.hmac]
version = "0.12.1"
default-features = false
[dependencies.reqwest]
version = "0.12.24"
default-features = false
features = ["json", "rustls-tls", "blocking"]
[dependencies.serde]
workspace = true
[dependencies.serde_json]
workspace = true
[dependencies.sha2]
version = "0.10.9"
default-features = false
[dependencies.thiserror]
version = "2.0.17"
default-features = false
