[package]
name = "nixdle"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme = "../README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "nixdle"
path = "src/lib.rs"
test = true
doctest = true
bench = false
doc = true
required-features = ["lib"]

[dependencies]
rand = { version = "0.9.2", default-features = false, features = ["thread_rng"] }

[dependencies.serde]
version = "1.0.228"
default-features = false
features = ["derive"]

[dependencies.serde_json]
version = "1.0.145"
default-features = false
features = ["std"]

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = ["macros", "chrono"]
