[package]
name = "nixdle"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme = "../README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "nixdle"
path = "src/lib.rs"
test = true
doctest = true
bench = false
doc = true

[features]
default = ["serde"]
sqlx = ["dep:sqlx"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies.chrono]
version = "0.4.42"
default-features = false
features = ["serde", "now"]
[dependencies.rand]
version = "0.9.2"
default-features = false
features = ["thread_rng"]
[dependencies.serde]
workspace = true
optional = true
[dependencies.serde_json]
version = "1.0"
default-features = false
features = ["std"]
optional = true
[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = ["macros"]
optional = true
